--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,15 @@
     transform: rotate(360deg);
   }
 }
+
+
+ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  min-width: 600px;
+}
+
+ul li a {
+  text-decoration: none;
+}
